# lsbsystem

./: .gitignore  CMakeLists.txt  Makefile  README.md  build  make_build
drivers/: test_driver.c
drivers/tutorial/01.hello_module/: Makefile  hello_module.c
drivers/tutorial/02.export/: Makefile  export_module1.c  export_module2.c
drivers/tutorial/03.param/: Makefile  module_param.c
drivers/tutorial/04.device_tree/: Makefile
drivers/tutorial/05.character_device/: static_character_device.c
drivers/tutorial/hello_module/: hello_module.c
embedded/: Makefile  main.c
embedded/system/: system_server.c  system_server.h
embedded/ui/: input.c  input.h  ui.c  ui.h
embedded/utils/: lsb_mq.c  lsb_mq.h  lsb_timer.c  lsb_timer.h  mq.c  mq.h  utils.c  utils.h
embedded/web/: web_server.c  web_server.h
patches/: 0001-kdt-RPI-5.15.patch  0002-kdt-rpi-firmware-hash.patch  0003-kdt-device-driver.patch
scripts/: nfs_init.sh  ssh_rpi.sh
